# tg-emoji-casino

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250116_01_base_schema.py  20250116_02_slot_tables.py  20250116_03_duels.py  20250116_04_gifts_treasury.py  20250116_05_referrals.py  20250117_01_crash_tables.py  20250120_01_crash_idx.py
apps/bot/: main.py
apps/bot/api/: auth.py  crash.py  deps.py  http.py
apps/bot/core/: __init__.py  awards.py  events.py  security.py  slot_payouts.py  wallets.py
apps/bot/db/: models.py
apps/bot/handlers/: __init__.py  duels.py  gifts.py  menu.py  shop.py  topup.py
apps/bot/infra/: db.py  logging.py  redis.py  settings.py
apps/bot/middlewares/: __init__.py  db.py  redis.py
apps/bot/repositories/: __init__.py  purchases.py  users.py
apps/bot/services/: __init__.py  crash.py  duels.py  gifts.py  referrals.py  store.py
apps/bot/ui/: errors.py
apps/bot/ws/: crash.py
apps/crash/: Dockerfile  next.config.mjs  package-lock.json  package.json
apps/crash/app/: layout.tsx  page.tsx
apps/crash/app/crash/: page.tsx
apps/crash/components/: AuthProvider.tsx
apps/crash/hooks/: useCrashSocket.ts  useLobbySocket.ts
apps/crash/lib/: api.ts  crash.ts  store.ts
apps/crash/prisma/: schema.prisma
configs/: payouts.json
nginx/: Dockerfile  nginx.conf
scripts/: demo_wallet_flow.py  rtp_simulator.py
tests/: conftest.py  test_crash_service.py  test_security.py  test_wallets_awards.py
(+14 files in other folders)
